--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Portfolio created by Valetyna Baranova" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <title>Portfolio Valetyna Baranova</title>
   </head>
   <body>
