--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio Valetyna Baranova</title>
   </head>
   <body>
